# my-package

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/my_package/: __init__.py  __main__.py  main.py
tests/: test_main.py
